chat overflow fixed

--- a/frontend/src/app/chat/chat.component.scss
+++ b/frontend/src/app/chat/chat.component.scss
@@ -4,39 +4,38 @@
 	.card
 	{
 		min-width: 15vw;
-		min-height: 50vh;
-
+		height: 50vh;
 		.card-body
 		{
-			display: flex;
-			flex-direction: column;
-			overflow-y: scroll;
-			height: 100%;
-			overflow-x: hidden;
-
-			.message
+			height: 40vh;
+			.messages
 			{
-				margin: 0.5rem 0;
-				padding: 0.5rem;
-				border-radius: 0.5rem;
-				background-color: #f5f5f5;
-				max-width: 80%;
-				word-wrap: break-word;
-				font-size: 0.8rem;
-				font-family: 'JetBrains Mono', monospace;
-				color: black;
-				.mini-avatar
+				overflow-y: scroll;
+				height: 90%;
+				.message
 				{
-					width: 1.5rem;
-					height: 1.5rem;
-					border-radius: 50%;
-					margin-right: 0.5rem;
+					margin: 0.5rem 0;
+					padding: 0.5rem;
+					border-radius: 0.5rem;
+					background-color: #f5f5f5;
+					max-width: 80%;
+					word-wrap: break-word;
+					font-size: 0.8rem;
+					font-family: 'JetBrains Mono', monospace;
+					color: black;
+					.mini-avatar
+					{
+						width: 1.5rem;
+						height: 1.5rem;
+						border-radius: 50%;
+						margin-right: 0.5rem;
+					}
 				}
 			}
-
 			.send
 			{
-				margin-top: auto;
+				height: 10%;
+				width: 100%;
 			}
 		}
 	}
